# scHiCTools

./: CMakeLists.txt  README.md  main.cpp
CMake/: FindOctave.cmake
embedding/: embedding.cpp  embedding.h  reproducibility.cpp  reproducibility.h
load/: ContactMaps.cpp  ContactMaps.h  load_hic_file.cpp  load_hic_file.h  processing_utils.cpp  processing_utils.h  straw.cpp
test/: correct_out  test_all.cpp  test_reproducibility.cpp
